--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<html>
+<head><title>Hello World</title></head>
+<body>
+<br/>
+<br/>
+<br/>
+
+Yandex accept images <input title="qwerty" type="file" multiple="multiple" name="files[]" accept="image/*,yandex-media-upload/stories10s,yandex-stories-30s/*" />
+
+<br/>
+<br/>
+<br/>
+Yandex accept video <input type="file" multiple="multiple" name="files[]" accept="video/*,yandex-media-upload/stories10s,yandex-stories-30s/*" />
+
+<br/>
+<br/>
+<br/>
+Yandex accept not multiple <input type="file" name="zzzzzfile" accept="image/*,yandex-media-upload/stories10s,yandex-stories-30s/*" />
+
+<br/>
+<br/>
+<br/>
+Only Yandex accept <input type="file" name="files[]" accept="yandex-media-upload/stories10s,yandex-stories-30s/*" />
+
+</body></html>
