Added empty accept

--- a/index.html
+++ b/index.html
@@ -22,4 +22,13 @@ Yandex accept not multiple <input type="file" name="zzzzzfile" accept="image/*,y
 <br/>
 Only Yandex accept <input type="file" name="files[]" accept="yandex-media-upload/stories10s,yandex-stories-30s/*" />
 
+<br/>
+<br/>
+<br/>
+Empty accept <input type="file" name="files[]" accept="" />
+<br/>
+<br/>
+<br/>
+Without accept <input type="file" name="files[]" />
+
 </body></html>
